# py-ai

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
py_ai/: __init__.py  cli.py  core.py  utils.py
py_ai/csv_tools/: __init__.py  extract_data.py  summarize_csv.py
py_ai/extractors/: csv.py  image.py  pdf.py
py_ai/image_tools/: __init__.py  extract_text.py  summarize_image.py
py_ai/pdf_tools/: __init__.py  extract_text.py  summarize_pdf.py
tests/: test_core.py
